[package]
name = "samples"
version = "0.14.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
publish = false

[dependencies]
tehuti = { version = "0.14", path = "../crates/_", features = ["postcard"] }
tehuti-diagnostics = { version = "0.14", path = "../crates/diagnostics" }
tehuti-mock = { version = "0.14", path = "../crates/mock" }
tehuti-socket = { version = "0.14", path = "../crates/socket" }
tehuti-client-server = { version = "0.14", path = "../crates/client-server" }
tehuti-timeline = { version = "0.14", path = "../crates/timeline" }
serde = { version = "1", features = ["derive"] }
crossterm = "0.29"
textwrap = "0.16"
vek = "0.17"
rand = { version = "0.10", features = ["chacha"] }
tracing-subscriber = "0.3"
