[package]
name = "tehuti"
version = "0.2.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Modular communication system for game development."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/tehuti"
repository = "https://github.com/PsichiX/tehuti"
documentation = "https://docs.rs/tehuti"
readme = "../../README.md"

[dependencies]
flume = { version = "0.12", default-features = false, features = ["async"] }
tracing = "0.1"
serde = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
