[package]
name = "tehuti"
version = "0.8.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Modular communication system for game development."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/tehuti"
repository = "https://github.com/PsichiX/tehuti"
documentation = "https://docs.rs/tehuti"
readme = "../../README.md"

[features]
default = ["postcard"]
postcard = ["dep:postcard"]

[dependencies]
flume = { version = "0.12", default-features = false, features = ["async"] }
tracing = "0.1"
serde = "1"
postcard = { version = "1", features = ["use-std"], optional = true }
typid = "1"
seahash = "4"
leb128 = "0.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
