[package]
name = "tehuti"
version = "0.14.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Modular communication system for game development."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/tehuti"
repository = "https://github.com/PsichiX/tehuti"
documentation = "https://docs.rs/tehuti"
readme = "../../README.md"

[features]
default = ["postcard", "decimal"]
postcard = ["dep:postcard"]
decimal = ["dep:rust_decimal"]

[dependencies]
flume = { version = "0.12", default-features = false, features = ["async"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"], optional = true }
rust_decimal = { version = "1.40", features = [
    "macros",
    "maths",
    "std",
    "serde-float",
], optional = true }
typid = "1"
seahash = "4"
leb128 = "0.2"
smallvec = { version = "1.15", features = ["serde"] }
