[package]
name = "tehuti-client-server"
version = "0.10.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Client-server framework for Tehuti communication system."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/tehuti"
repository = "https://github.com/PsichiX/tehuti"
documentation = "https://docs.rs/tehuti-client-server"
readme = "../../README.md"

[dependencies]
tehuti = { version = "0.10", path = "../_" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
