[package]
name = "tehuti-diagnostics"
version = "0.18.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Diagnostics tools for Tehuti communication system."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/tehuti"
repository = "https://github.com/PsichiX/tehuti"
documentation = "https://docs.rs/tehuti-diagnostics"
readme = "../../README.md"

[dependencies]
tehuti = { version = "0.18", path = "../_" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
textwrap = "0.16"
chrono = "0.4"
