[package]
name = "tehuti-mock"
version = "0.12.1"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Mock testing engine for Tehuti communication system."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/tehuti"
repository = "https://github.com/PsichiX/tehuti"
documentation = "https://docs.rs/tehuti-mock"
readme = "../../README.md"

[dependencies]
tehuti = { version = "0.12", path = "../_" }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
textwrap = "0.16"
