[package]
name = "tehuti-socket"
version = "0.12.2"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Socket engine for Tehuti communication system."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/tehuti"
repository = "https://github.com/PsichiX/tehuti"
documentation = "https://docs.rs/tehuti-socket"
readme = "../../README.md"

[dependencies]
tehuti = { version = "0.12", path = "../_" }
tracing = "0.1"

[dev-dependencies]
tehuti-mock = { version = "0.12", path = "../mock" }
