[package]
name = "tehuti-timeline"
version = "0.15.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Branching timeline framework for Tehuti communication system."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/tehuti"
repository = "https://github.com/PsichiX/tehuti"
documentation = "https://docs.rs/tehuti-timeline"
readme = "../../README.md"

[dependencies]
tehuti = { version = "0.15", path = "../_" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1.15", features = ["serde"] }

[dev-dependencies]
tehuti-mock = { version = "0.15", path = "../mock" }
